--- a/content/HW.html
+++ b/content/HW.html
@@ -130,7 +130,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li class='has-children'><a href='HW.html'>HW</a><ul class='dropdown'><li><a href='W10.html'>W10</a><li><a href='W11.html'>W11</a></li></ul><li><a href='About.html'>About</a><li><a href='cp 2022.html'>cp 2022</a><li><a href='Brython.html'>Brython</a></li>
+                     <li class='has-children'><a href='HW.html'>HW</a><ul class='dropdown'><li><a href='w10.html'>w10</a><li><a href='w11.html'>w11</a></li></ul><li><a href='About.html'>About</a><li><a href='cp2022.html'>cp2022</a><li><a href='Brython.html'>Brython</a></li>
                       </ul>
                 </nav>
               </div>
@@ -141,8 +141,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content"> <a href='W10.html'>Next</a> >> W10<br /><h1>HW</h1>
-<br /> <a href='W10.html'>Next</a> >> W10</div>
+    <div id="tipue_search_content"> <a href='w10.html'>Next</a> >> w10<br /><h1>HW</h1>
+<br /> <a href='w10.html'>Next</a> >> w10</div>
         
     <!-- footer -->
       <div class="container">
