--- a/content/W10.html
+++ b/content/W10.html
@@ -130,7 +130,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li class='has-children'><a href='HW.html'>HW</a><ul class='dropdown'><li><a href='W10.html'>W10</a><li><a href='W11.html'>W11</a></li></ul><li><a href='About.html'>About</a><li><a href='cp 2022.html'>cp 2022</a><li><a href='Brython.html'>Brython</a></li>
+                     <li class='has-children'><a href='HW.html'>HW</a><ul class='dropdown'><li><a href='w10.html'>w10</a><li><a href='w11.html'>w11</a></li></ul><li><a href='About.html'>About</a><li><a href='cp2022.html'>cp2022</a><li><a href='Brython.html'>Brython</a></li>
                       </ul>
                 </nav>
               </div>
@@ -141,7 +141,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">HW << <a href='HW.html'>Previous</a> <a href='W11.html'>Next</a> >> W11<br /><h1>W10</h1>
+    <div id="tipue_search_content">HW << <a href='HW.html'>Previous</a> <a href='w11.html'>Next</a> >> w11<br /><h1>w10</h1>
 <p><a href="https://en.wikipedia.org/wiki/Python_(programming_language)">https://en.wikipedia.org/wiki/Python_(programming_language)</a></p>
 <h4>Examples:</h4>
 <p style="padding-left: 30px;"><a href="https://gist.github.com/mdecycu/d9082d678096bd58378d6afe2c7fa05d">https://gist.github.com/mdecycu/d9082d678096bd58378d6afe2c7fa05d</a></p>
@@ -426,7 +426,8 @@ doc["threejsblock"].bind("click", threejsblock.do)
 <p><!-- Brython 程式執行的結果, 都以 brython_div1 作為切入位置 --></p>
 <div id="brython_div2"></div>
 <!-- editor2 結束 --><hr/>
-<script src="https://unpkg.com/three@0.144.0/build/three.js" type="text/javascript"></script><br />HW << <a href='HW.html'>Previous</a> <a href='W11.html'>Next</a> >> W11</div>
+<script src="https://unpkg.com/three@0.144.0/build/three.js" type="text/javascript"></script>
+<br />HW << <a href='HW.html'>Previous</a> <a href='w11.html'>Next</a> >> w11</div>
         
     <!-- footer -->
       <div class="container">
