--- a/content/cp2022.html
+++ b/content/cp2022.html
@@ -130,7 +130,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li class='has-children'><a href='HW.html'>HW</a><ul class='dropdown'><li><a href='W10.html'>W10</a><li><a href='W11.html'>W11</a></li></ul><li><a href='About.html'>About</a><li><a href='cp 2022.html'>cp 2022</a><li><a href='Brython.html'>Brython</a></li>
+                     <li class='has-children'><a href='HW.html'>HW</a><ul class='dropdown'><li><a href='w10.html'>w10</a><li><a href='w11.html'>w11</a></li></ul><li><a href='About.html'>About</a><li><a href='cp2022.html'>cp2022</a><li><a href='Brython.html'>Brython</a></li>
                       </ul>
                 </nav>
               </div>
@@ -141,9 +141,9 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">About << <a href='About.html'>Previous</a> <a href='Brython.html'>Next</a> >> Brython<br /><h1>cp 2022</h1>
-<p><a href="https://mdecp2022.github.io/site-Changyou41123220/content/cp%202022.html?src=https://gist.githubusercontent.com/Changyou41123220/496422d1187e33249d9dbfbe71d1a06d/raw/cfd6ba1f0a338a8d6030ad64a04013018314bab6/radom_draw_1b.py&amp;
-src2=https://gist.githubusercontent.com/Changyou41123220/496422d1187e33249d9dbfbe71d1a06d/raw/cfd6ba1f0a338a8d6030ad64a04013018314bab6/list_1b_static_site.py">test</a></p>
+    <div id="tipue_search_content">About << <a href='About.html'>Previous</a> <a href='Brython.html'>Next</a> >> Brython<br /><h1>cp2022</h1>
+<p><a href="https://mdecp2022.github.io/site-Liu16552/content/cp2022.html?src=https://gist.githubusercontent.com/Liu16552/c7907f9d0914c7a9dd82edc5bdc59ef1/raw/f3749997f27fbcbcb813dc74870f076c06902245/radom_draw_1b.py&amp;
+src2=https://gist.githubusercontent.com/Liu16552/c7907f9d0914c7a9dd82edc5bdc59ef1/raw/f3749997f27fbcbcb813dc74870f076c06902245/list_1b_static_site.py">test</a></p>
 <p><a href="https://en.wikipedia.org/wiki/Python_(programming_language)">https://en.wikipedia.org/wiki/Python_(programming_language)</a></p>
 <h4>Examples:</h4>
 <p style="padding-left: 30px;"><a href="https://gist.github.com/mdecycu/d9082d678096bd58378d6afe2c7fa05d">https://gist.github.com/mdecycu/d9082d678096bd58378d6afe2c7fa05d</a></p>
@@ -185,12 +185,12 @@ brython({debug:1, pythonpath:['./../cmsimde/static/','./../downloads/py/']});
 <p>從 1 累加到 100:</p>
 <p><button id="add1to100">1 add to 100</button></p>
 <p>將 iterable 與 iterator <a href="https://home.gamer.com.tw/creationDetail.php?sn=4337438">相關說明</a>, 利用 Brython 與 Ace Editor 整理在這個頁面.</p>
-<p><a h2=""><!-- 導入 brython 程式庫 --></a></p>
+<!-- 導入 brython 程式庫 -->
 <p>
 <script src="./../cmsimde/static/brython.js"></script>
 <script src="./../cmsimde/static/brython_stdlib.js"></script>
 </p>
-<p><a h2=""><!-- 啟動 Brython --></a></p>
+<!-- 啟動 Brython -->
 <p>
 <script>
 window.onload=function(){
@@ -292,7 +292,7 @@ doc["add1to100"].bind('click', add)
 </script>
 </p>
 <p><!-- add 1 to 100 結束--></p>
-<p><a h2=""><!-- editor1 開始 --></a></p>
+<!-- editor1 開始 -->
 <p><!-- 用來顯示程式碼的 editor 區域 --></p>
 <div id="kw_editor1" style="width: 600px; height: 300px;"></div>
 <p><!-- 以下的表單與按鈕與前面的 Javascript doSave 函式以及 FileSaver.min.js 互相配合 --></p>
@@ -308,9 +308,7 @@ doc["add1to100"].bind('click', add)
 <div style="width: 100%; height: 100%;"><textarea autocomplete="off" id="kw_console1"></textarea></div>
 <p><!-- Brython 程式執行的結果, 都以 brython_div1 作為切入位置 --></p>
 <div id="brython_div1"></div>
-<p><a h2=""><!-- editor1 結束 --></a></p>
-<hr/>
-<p><a h2=""><!-- ########################################## --></a></p>
+<!-- editor1 結束 --><hr/><!-- ########################################## -->
 <p>從 1 累加到 100 part2:</p>
 <p><button id="add1to100part2">1 add to 100</button><button id="cango_three_gears">cango_three_gears</button><button id="bsnake">BSnake</button><button id="aitetris">AI Tetris</button><button id="threejsblock">Rotating Block</button></p>
 <p><!-- 請注意, 這裡使用 Javascript 將 localStorage["kw_py_src2"] 中存在近端瀏覽器的程式碼, 由使用者決定存檔名稱--></p>
@@ -413,7 +411,7 @@ doc["threejsblock"].bind("click", threejsblock.do)
 </script>
 </p>
 <p><!-- add 1 to 100 part2 結束--></p>
-<p><a h2=""><!-- editor2 開始 --></a></p>
+<!-- editor2 開始 -->
 <p><!-- 用來顯示程式碼的 editor 區域 --></p>
 <div id="kw_editor2" style="width: 600px; height: 300px;"></div>
 <p><!-- 以下的表單與按鈕與前面的 Javascript doSave 函式以及 FileSaver.min.js 互相配合 --></p>
@@ -429,11 +427,8 @@ doc["threejsblock"].bind("click", threejsblock.do)
 <div style="width: 100%; height: 100%;"><textarea autocomplete="off" id="kw_console2"></textarea></div>
 <p><!-- Brython 程式執行的結果, 都以 brython_div1 作為切入位置 --></p>
 <div id="brython_div2"></div>
-<p><a h2=""><!-- editor2 結束 --></a></p>
-<hr/>
-<p><a h2="">
+<!-- editor2 結束 --><hr/>
 <script src="https://unpkg.com/three@0.144.0/build/three.js" type="text/javascript"></script>
-</a></p>
 <br />About << <a href='About.html'>Previous</a> <a href='Brython.html'>Next</a> >> Brython</div>
         
     <!-- footer -->
