--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -572,7 +572,9 @@ doc["threejsblock"].bind("click", threejsblock.do)
 <!-- editor2 結束 --><hr/>
 <script src="https://unpkg.com/three@0.144.0/build/three.js" type="text/javascript"></script>
 <h2>w12</h2>
-<h1>About</h1>
+<h2>w13</h2>
+<p>f=c*9/5+32</p>
+<p>c=(f-32)*5/9</p><h1>About</h1>
 <p>cmsite: wcms use <a href="https://github.com/mdecycu/cmsimde">https://github.com/mdecycu/cmsimde</a> as submodule</p>
 <h1>cp2022</h1>
 <p><a href="https://mdecp2022.github.io/site-Liu16552/content/cp2022.html?src=https://gist.githubusercontent.com/Liu16552/c7907f9d0914c7a9dd82edc5bdc59ef1/raw/f3749997f27fbcbcb813dc74870f076c06902245/radom_draw_1b.py&amp;
