--- a/content/w13.html
+++ b/content/w13.html
@@ -142,7 +142,9 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">w12 << <a href='w12.html'>Previous</a> <a href='About.html'>Next</a> >> About<br /><h1>w13</h1>
-<br />w12 << <a href='w12.html'>Previous</a> <a href='About.html'>Next</a> >> About</div>
+<p>f=c*9/5+32</p>
+<p>c=(f-32)*5/9</p>
+<p><a href="https://mdecp2022.github.io/site-Changyou41123220/content/Brython.html?src=https://gist.githubusercontent.com/Changyou41123220/18c9890e476f62b535677f1f43b5fb38/raw/8f3213bc224d5be8cd1d4a1b1db9abc1346ea770/%25E6%25BA%25AB%25E5%25BA%25A6%25E8%25BD%2589%25E6%258F%259B%25E7%25A8%258B%25E5%25BC%258F">溫度轉換範例</a></p><br />w12 << <a href='w12.html'>Previous</a> <a href='About.html'>Next</a> >> About</div>
         
     <!-- footer -->
       <div class="container">
