--- a/content/w12.html
+++ b/content/w12.html
@@ -130,7 +130,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li class='has-children'><a href='HW.html'>HW</a><ul class='dropdown'><li><a href='W10.html'>W10</a><li><a href='W11.html'>W11</a><li><a href='w12.html'>w12</a><li><a href='w13.html'>w13</a></li></ul><li><a href='About.html'>About</a><li><a href='cp2022.html'>cp2022</a><li><a href='Brython.html'>Brython</a></li>
+                     <li class='has-children'><a href='HW.html'>HW</a><ul class='dropdown'><li><a href='W10.html'>W10</a><li><a href='W11.html'>W11</a><li><a href='w12.html'>w12</a><li><a href='w13.html'>w13</a><li><a href='w14.html'>w14</a></li></ul><li><a href='About.html'>About</a><li><a href='cp2022.html'>cp2022</a><li><a href='Brython.html'>Brython</a></li>
                       </ul>
                 </nav>
               </div>
@@ -142,7 +142,8 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">W11 << <a href='W11.html'>Previous</a> <a href='w13.html'>Next</a> >> w13<br /><h1>w12</h1>
-<p><a href="https://mdecp2022.github.io/site-Changyou41123220/content/Brython.html?src=https://gist.githubusercontent.com/Changyou41123220/18c9890e476f62b535677f1f43b5fb38/raw/8f3213bc224d5be8cd1d4a1b1db9abc1346ea770/%25E6%25BA%25AB%25E5%25BA%25A6%25E8%25BD%2589%25E6%258F%259B%25E7%25A8%258B%25E5%25BC%258F">溫度轉換程式</a></p><br />W11 << <a href='W11.html'>Previous</a> <a href='w13.html'>Next</a> >> w13</div>
+<p><a href="https://mdecp2022.github.io/site-Changyou41123220/content/Brython.html?src=https://gist.githubusercontent.com/Changyou41123220/18c9890e476f62b535677f1f43b5fb38/raw/8f3213bc224d5be8cd1d4a1b1db9abc1346ea770/%25E6%25BA%25AB%25E5%25BA%25A6%25E8%25BD%2589%25E6%258F%259B%25E7%25A8%258B%25E5%25BC%258F">溫度轉換程式</a></p>
+<br />W11 << <a href='W11.html'>Previous</a> <a href='w13.html'>Next</a> >> w13</div>
         
     <!-- footer -->
       <div class="container">
