--- a/content/w14.html
+++ b/content/w14.html
@@ -2,6 +2,7 @@
         <head>
         <title>cmsimde_site</title>
         <meta charset="utf-8">
+<meta property="head" content="H2">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
@@ -140,8 +141,9 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content"> <a href='W10.html'>Next</a> >> W10<br /><h1>HW</h1>
-<br /> <a href='W10.html'>Next</a> >> W10</div>
+    <div id="tipue_search_content">w13 << <a href='w13.html'>Previous</a> <a href='About.html'>Next</a> >> About<br /><h1>w14</h1>
+<p></p>
+<br />w13 << <a href='w13.html'>Previous</a> <a href='About.html'>Next</a> >> About</div>
         
     <!-- footer -->
       <div class="container">
