--- a/config/content.htm
+++ b/config/content.htm
@@ -429,11 +429,15 @@ print(cp_stud, cp_score)
 <p>2.全球資訊網能夠提供甚麼功能或有什麼優點?</p>
 <p>   A:分享自己資料的供大家做使用，使人們能夠接續前人的智慧。</p>
 <p>3.Replit, stud.cycu.org 與 localhost 分別代表甚麼?</p>
-<p>   A:Replit是第三方</p>
+<p>   A:Replit是第三方寫程式及維護網站  stud.cycu.org是遠端維護網站 localhost是近端維護網站</p>
 <p>4.https, ssh 到底提供使用者那些功能或優點?</p>
+<p>   A:</p>
 <p>5.Brython 與 Python 有甚麼差別?</p>
+<p>   A:</p>
 <p>6.能夠直接在瀏覽器中以 Brython 繪製中華民國國旗, 或模擬綠色方塊在方塊格點中任意移動, 代表甚麼?</p>
-<p>7.變數, 字串, 整數, 浮點數, 數列, Tuple, Dictionary, 函式, 重複迴圈, class, 物件導向, 資料庫, 這些名詞對您而言代表甚麼?</p><h1>About</h1>
+<p>   A:</p>
+<p>7.變數, 字串, 整數, 浮點數, 數列, Tuple, Dictionary, 函式, 重複迴圈, class, 物件導向, 資料庫, 這些名詞對您而言代表甚麼?</p>
+<p>   A:</p><h1>About</h1>
 <p>cmsite: wcms use <a href="https://github.com/mdecycu/cmsimde">https://github.com/mdecycu/cmsimde</a> as submodule</p>
 <h1>cp2022</h1>
 <p><a href="https://mdecp2022.github.io/site-Liu16552/content/cp2022.html?src=https://gist.githubusercontent.com/Liu16552/c7907f9d0914c7a9dd82edc5bdc59ef1/raw/f3749997f27fbcbcb813dc74870f076c06902245/radom_draw_1b.py&amp;
