--- a/content/w15.html
+++ b/content/w15.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html><html>
         <head>
-        <title>cmsimde_site</title>
+        <title>Changyou</title>
         <meta charset="utf-8">
 <meta property="head" content="H2">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -147,11 +147,15 @@ img.add_border {
 <p>2.全球資訊網能夠提供甚麼功能或有什麼優點?</p>
 <p>   A:分享自己資料的供大家做使用，使人們能夠接續前人的智慧。</p>
 <p>3.Replit, stud.cycu.org 與 localhost 分別代表甚麼?</p>
-<p>   A:Replit是第三方</p>
+<p>   A:Replit是第三方寫程式及維護網站  stud.cycu.org是遠端維護網站 localhost是近端維護網站</p>
 <p>4.https, ssh 到底提供使用者那些功能或優點?</p>
+<p>   A:</p>
 <p>5.Brython 與 Python 有甚麼差別?</p>
+<p>   A:</p>
 <p>6.能夠直接在瀏覽器中以 Brython 繪製中華民國國旗, 或模擬綠色方塊在方塊格點中任意移動, 代表甚麼?</p>
-<p>7.變數, 字串, 整數, 浮點數, 數列, Tuple, Dictionary, 函式, 重複迴圈, class, 物件導向, 資料庫, 這些名詞對您而言代表甚麼?</p><br />w14 << <a href='w14.html'>Previous</a> <a href='About.html'>Next</a> >> About</div>
+<p>   A:</p>
+<p>7.變數, 字串, 整數, 浮點數, 數列, Tuple, Dictionary, 函式, 重複迴圈, class, 物件導向, 資料庫, 這些名詞對您而言代表甚麼?</p>
+<p>   A:</p><br />w14 << <a href='w14.html'>Previous</a> <a href='About.html'>Next</a> >> About</div>
         
     <!-- footer -->
       <div class="container">
