--- a/content/w15.html
+++ b/content/w15.html
@@ -130,7 +130,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li class='has-children'><a href='HW.html'>HW</a><ul class='dropdown'><li><a href='W10.html'>W10</a><li><a href='W11.html'>W11</a><li><a href='w12.html'>w12</a><li><a href='w13.html'>w13</a><li><a href='w14.html'>w14</a><li><a href='w15.html'>w15</a></li></ul><li><a href='About.html'>About</a><li><a href='cp2022.html'>cp2022</a><li><a href='Brython.html'>Brython</a></li>
+                     <li class='has-children'><a href='HW.html'>HW</a><ul class='dropdown'><li><a href='W10.html'>W10</a><li><a href='W11.html'>W11</a><li><a href='w12.html'>w12</a><li><a href='w13.html'>w13</a><li class='has-children'><a href='w14.html'>w14</a><ul class='dropdown'><li><a href='w14-1.html'>w14-1</a></li></ul><li><a href='w15.html'>w15</a></li></ul><li><a href='About.html'>About</a><li><a href='cp2022.html'>cp2022</a><li><a href='Brython.html'>Brython</a></li>
                       </ul>
                 </nav>
               </div>
@@ -141,7 +141,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">w14 << <a href='w14.html'>Previous</a> <a href='About.html'>Next</a> >> About<br /><h1>w15</h1>
+    <div id="tipue_search_content">w14-1 << <a href='w14-1.html'>Previous</a> <a href='About.html'>Next</a> >> About<br /><h1>w15</h1>
 <p>1.為何學習計算機程式需要建立個人倉儲?</p>
 <p>   A:因為這樣才可以放作業。</p>
 <p>2.全球資訊網能夠提供甚麼功能或有什麼優點?</p>
@@ -155,7 +155,8 @@ img.add_border {
 <p>6.能夠直接在瀏覽器中以 Brython 繪製中華民國國旗, 或模擬綠色方塊在方塊格點中任意移動, 代表甚麼?</p>
 <p>   A:Brython很厲害。</p>
 <p>7.變數, 字串, 整數, 浮點數, 數列, Tuple, Dictionary, 函式, 重複迴圈, class, 物件導向, 資料庫, 這些名詞對您而言代表甚麼?</p>
-<p>   A:邏輯思考</p><br />w14 << <a href='w14.html'>Previous</a> <a href='About.html'>Next</a> >> About</div>
+<p>   A:邏輯思考</p>
+<br />w14-1 << <a href='w14-1.html'>Previous</a> <a href='About.html'>Next</a> >> About</div>
         
     <!-- footer -->
       <div class="container">
